# tg_bot

./: game.json  main.py  pyproject.toml
controllers/: db.py  exam.py  game.py  start.py
